--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
@@ -23,7 +23,7 @@
         <button class="ui  grey button" type="button" (click)="clickClear()">
           ล้างข้อมูล
         </button>
-        <button class="ui  green button" type="button" routerLink="/int09/1/1">
+        <button class="ui  green button" type="button" routerLink="/int09/2-1-2">
           สร้าง
         </button>
       </div>
