--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
@@ -46,9 +46,7 @@
       </div>
   
       <div class="ui form center aligned grid">
-          <button class="ui  primary button" type="button" >
-              บันทึก
-            </button>
+          <button class="ui  primary button" routerLink="/int09/2-1-3"  type="button" ><i class="file outline icon"></i> บันทึก</button>
       </div>  
       <br>      
     </div>
