int09225 add file

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -154,13 +154,13 @@
                         <th id="travelCost"></th>                          
                         <th colspan="4"></th>
                     </tr>
-                    </tfoot>
+                </tfoot>
               </table>      
         <div class="ui form center aligned grid">
             <button class="ui  grey button" type="button" routerLink="/int09/2-1-2" ><i class="reply icon"></i>กลับ</button>
             <button class="ui  primary button" type="button" ><i class="trash alternate outline icon"></i> ลบ</button>
             <button class="ui  primary button" type="button" ><i class="save outline icon"></i> บันทึก</button>
-            <button class="ui  primary button" type="button" ><i class="external alternate icon"></i>Export</button>
+            <button class="ui  primary button" type="button" routerLink="/int09/2-1-4"><i class="external alternate icon"></i>Export</button>
             <button class="ui  green button" type="button" ><i class="file outline icon"></i> สัญญาการยืมเงิน</button>
         </div> 
         <br> 
