--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
@@ -1,4 +1,6 @@
+<form (submit)="onSubmit($event)" >
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+
     <span>รายงานการพิจารณา ของดหรือลดเบี้ยปรับเงินเพิ่ม</span>
 </div>
 
@@ -348,7 +350,7 @@
 <div class="ui bottom centered attached segment">
     <div class="ui center aligned grid">
         <div class="eight wide column">
-            <button class="ui mini green button" type="button">
+            <button class="ui mini green button" type="submit">
               <i class="save icon"></i>
               พิมพ์เอกสาร
             </button>
@@ -359,3 +361,5 @@
         </div>
     </div>
 </div>
+
+</form>
