--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-17/ts01-17.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-17/ts01-17.component.html
@@ -361,7 +361,7 @@
         </div>
 
         <div class="inline fields">
-          <div class="two wide field">๓
+          <div class="two wide field">
             <p>ผู้รับผิดชอบ : </p>
           </div>
           <div class="six wide field">
