--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -95,11 +95,26 @@
       </div>
       <div class="ui grid">
           <div class="three wide column ui right aligned"><label>จำนวนวันเข้าพัก</label></div>
-          <div class="three wide column"><input id="numberLive" type="text"></div>
+          <div class="two wide column"><input id="numberLive" type="text"></div>
           <div class="two wide column right aligned"><label>ประเภทการเบิก</label></div>
-          <div class="two wide column"><input id="typeWithdrawal" type="text"></div>
-          <div class="two wide column right aligned"><label>ประเภทห้องพัก</label></div>
-          <div class="three wide column"><input id="typeRoom" type="text"></div>
+          <div class="two wide column">
+            <select class="ui dropdown"  id="typeWithdrawal" name="typeWithdrawal" (change)="typeRoom()">
+                <option value="">ปกติ</option>
+                <option value="0">ปกติ </option>
+                <option value="1">เหมาจ่าย</option>
+                <option value="2">อบรมประเภท ก</option>
+                <option value="3">อบรมประเภท ข</option>
+            </select>
+            </div>
+     
+          <div id="typeRoomLabel"   class="three wide column right aligned"><label>ประเภทห้องพัก</label></div>
+          <div id="typeRoomValue"  class="three wide column">            
+                <select class="ui dropdown"  id="typeRoom" >
+                    <option value="">ห้องเดี่ยว</option>
+                    <option value="1">ห้องเดี่ยว </option>
+                    <option value="2">ห้องคู่</option>
+                </select>
+            </div>
       </div>
       <div class="ui grid">
           <div class="three wide column right aligned"><label>หมายเหตุ</label></div>
