set session int09213

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -61,6 +61,7 @@
               <option value="">สนง. - บ้าน</option>
               <option value="1">บ้าน - สนง.</option>
               <option value="2">สนง. - บ้าน</option>
+              <option value="3">สนง. - สนง.</option>
           </select>
         </div>
         <div class="two wide column ui right aligned"><label>กรณีฝึกอบรม</label></div>
