--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
@@ -3,27 +3,25 @@
   </div>
   <div class="ui form center aligned" id="int09-1"  ngNativeValidate>
     <div class="ui attached  segment">
-      <div class="ui grid">
-          <div class="two wide column"></div>
-          <div class="two wide column"><label>สรรพสามิตภาค</label></div>
-          <div class="four wide column"><input type="text" id="money"></div>
-          <div class="two wide column"><label>สรรพสามิตพื้นที่</label></div>
-          <div class="four wide column"><input type="text" id="department"></div>
-          <div class="two wide column"></div>
-          <div class="two wide column"></div>
-      </div>
-      <div class="ui grid">
-          <div class="two wide column"></div>
-          <div class="two wide column"><label>สรพพสามิตสาขา</label></div>
-          <div class="four wide column"><input type="text" id="money"></div>
-          <div class="two wide column"><label>หน่วยงานผู้ตรวจ</label></div>
-          <div class="four wide column"><input type="text" id="department"></div>
-          <div class="two wide column"></div>
-          <div class="two wide column"></div>
-      </div>
+        <div class="ui two column centered grid">
+            <div class="two wide column"><label>สรรพสามิตภาค</label></div>
+            <div class="five wide column"><input type="text" id="money"></div>           
+        </div>
+        <div class="ui two column centered grid">       
+            <div class="two wide column"><label>สรรพสามิตพื้นที่</label></div>
+            <div class="five wide column"><input type="text" id="department"></div> 
+        </div>
+        <div class="ui two column centered grid">       
+            <div class="two wide column"><label>สรพพสามิตสาขา</label></div>
+            <div class="five wide column"><input type="text" id="money"></div>
+        </div>
+        <div class="ui two column centered grid">       
+            <div class="two wide column"><label>หน่วยงานผู้ตรวจ</label></div>
+            <div class="five wide column"><input type="text" id="department"></div>
+        </div>     
       <div class="ui grid">
           <div class="three wide column"></div>
-          <div class="two wide column"><label>ตั้งแต่วันที่</label></div>
+          <div class="two wide column right aligned"><label>ตั้งแต่วันที่</label></div>
           <div class="three wide column">
             <div class="ui calendar" id="startDate">
               <div class="ui input left icon">
@@ -32,7 +30,7 @@
               </div>
             </div>
         </div>
-          <div class="two wide column"><label>ถึง</label></div>
+          <div class="one wide column right aligned"><label>ถึง</label></div>
           <div class="three wide column">
               <div class="ui calendar" id="endDate">
                   <div class="ui input left icon">
