--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
@@ -72,7 +72,7 @@
         </div>
         <div class="inline fields">
             <div class="four  wide field "></div>
-            <button class="ui mini primary button">ดาวน์โหลดข้อมูล </button>             
+            <button class="ui mini primary button" routerLink="/cop02/tax-ws-review">ดาวน์โหลดข้อมูล </button>             
             <div class="three wide field "></div>
             <button class="ui mini button">ยกเลิก</button>
         </div>
